--- a/taipei-traffic-accident-hotspots/View/Base.lproj/Main.storyboard
+++ b/taipei-traffic-accident-hotspots/View/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FUW-oC-YUl">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -55,7 +55,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Nx1-Gt-29B">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="798"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="Sfd-Da-8QH">
@@ -101,11 +101,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" showsScale="YES" showsTraffic="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WaM-w5-k6J">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="798"/>
                                 <connections>
                                     <outlet property="delegate" destination="FUW-oC-YUl" id="yJC-8k-758"/>
                                 </connections>
                             </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZR-RT-OZF">
+                                <rect key="frame" x="364" y="778" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Ss8-Pe-hWv"/>
+                                    <constraint firstAttribute="width" constant="30" id="scb-Vo-Meg"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" backgroundImage="icons8-Tiny Glyph-GPS-unlock"/>
+                                <state key="selected" backgroundImage="icons8-Tiny Glyph-GPS"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="compassClick:" destination="FUW-oC-YUl" eventType="touchUpInside" id="Mjh-B9-hq9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="z0S-un-GMi"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -114,10 +132,13 @@
                             <constraint firstItem="WaM-w5-k6J" firstAttribute="top" secondItem="z0S-un-GMi" secondAttribute="top" id="BAI-ZK-2aY"/>
                             <constraint firstItem="WaM-w5-k6J" firstAttribute="leading" secondItem="z0S-un-GMi" secondAttribute="leading" id="Lc9-zK-yfm"/>
                             <constraint firstItem="z0S-un-GMi" firstAttribute="bottom" secondItem="WaM-w5-k6J" secondAttribute="bottom" id="Qo0-Kk-QnX"/>
+                            <constraint firstItem="z0S-un-GMi" firstAttribute="bottom" secondItem="kZR-RT-OZF" secondAttribute="bottom" constant="34" id="hiW-DR-UpE"/>
+                            <constraint firstItem="z0S-un-GMi" firstAttribute="trailing" secondItem="kZR-RT-OZF" secondAttribute="trailing" constant="20" id="zNe-Aj-ttk"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gIV-Qd-Kcb"/>
                     <connections>
+                        <outlet property="mCompassButton" destination="kZR-RT-OZF" id="tn5-34-7Qh"/>
                         <outlet property="mMapView" destination="WaM-w5-k6J" id="lkb-Q8-py4"/>
                     </connections>
                 </viewController>
@@ -127,6 +148,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icons8-Tiny Glyph-GPS" width="32" height="32"/>
+        <image name="icons8-Tiny Glyph-GPS-unlock" width="32" height="32"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
